--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,17 @@
         "sentry/sdk": "^3.0",
         "aws/aws-sdk-php": "^3.171"
     },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
     "autoload": {
         "psr-4": {
              "Core\\": "Core/",
              "App\\": "App/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
