--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,6 @@
              "App\\": "App/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
